# lisp-interpreter-ocaml

./: dune  dune-project  lisp_interpreter.opam
_build/: log
lib/: dune  lexer.ml  lexer.mli  parser.ml  types.ml
lisp_interpreter/lib/: lexer.ml
lisp_interpreter/test/: dune  test_lexer.ml
test/: dune  test_lexer.ml  test_lisp_interpreter.ml
